# py-poetry-m1

./: Makefile  README.md  docker-compose.python-envs.yml  docker-compose.yml  install.sh  main.py  pyproject.toml  python-envs.env
