[tool.poetry]
name = "pypoetrym1"
version = "0.1.0"
description = "Using python poetry on M1"
authors = ["Denis Stalz-John <denis.stalz-john@codecentric.de>"]

[tool.poetry.dependencies]
python = "~3.8"
pandas = "^1.3.5"
numpy = "^1.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
