[tool.poetry]
name = "pypoetrym1"
version = "0.1.0"
description = "Using python poetry and tensorflow on M1"
authors = ["Denis Stalz-John <denis.stalz-john@codecentric.de>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

tensorflow-macos = {version = "2.8.0", optional = true}
tensorflow-metal = {version = "^0.4.0", optional = true}
tensorflow = {version = "2.8.0", optional = true}

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
tensorflow-x64 = ["tensorflow"]
tensorflow-m1 = ["tensorflow-macos", "tensorflow-metal"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
